--- a/ITEC FINALS/about.css
+++ b/ITEC FINALS/about.css
@@ -6,13 +6,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-main {
-    background-image:linear-gradient(green ,teal , teal, green);
+body {
+    background-image:linear-gradient(#B4F1F1 ,rgb(105, 212, 212) , rgb(105, 212, 212), #B4F1F1);
     width: 100%;
     height: 300vh;
     background-color: #ffffff;
     z-index: -1;
 }
+
 nav {
     width: 100%;
     display: flex;
@@ -22,8 +23,9 @@ nav {
     top: 0%;
     z-index: 100;
 }
+
 .about,.Sched,.prof{
-    margin-right: 5px;
+    padding-right: 5px;
 }
 .link{
     background: none;
@@ -36,6 +38,99 @@ nav {
     padding: 0;
     border-radius: 10%;
     }
+
+.course {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 250px;
+    padding: 5%;
+    background-color: rgba(255, 255, 255, .20);  
+    backdrop-filter: blur(3px);
+    border-radius: 20%;
+    text-shadow:  1px 1px rgb(41, 60, 63);
+}
+.course h1 {
+    font-family: serif;
+    color: goldenrod;
+}
+.course p {
+    font-family: Poppins;
+}
+
+.website {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 750px;
+    padding: 5%;
+    background-color: rgba(255, 255, 255, .20);  
+    backdrop-filter: blur(3px);
+    border-radius: 20%;
+    text-shadow:  1px 1px rgb(41, 60, 63);
+}
+.website h1 {
+    font-family: serif;
+    color: goldenrod;
+}
+.website p {
+    font-family: Poppins;
+}
+.us {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 800px;
+    padding: 5%;
+    background-color: rgba(255, 255, 255, .40);  
+    backdrop-filter: blur(3px);
+    border-radius: 20%;
+    text-shadow:  1px 1px rgb(41, 60, 63);
+}
+.us h1 {
+    font-family: serif;
+    color: goldenrod;
+}
+.us p {
+    font-family: Poppins;
+}
+
+.firstbg {
+    z-index: 0;
+    background-image: url(ABG1.jpg);
+    background-size: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 50%;
+    -webkit-mask-image: linear-gradient(#000, rgba(0,0,0,0));
+    mask-image: linear-gradient(#000, rgba(0,0,0,0));
+}
+.secondbg {
+    z-index: 1;
+    background-image:linear-gradient(to top, rgb(105, 212, 212), rgba(0,0,0,0), rgba(105, 212, 212) ),  url(ABGP5.jpg);
+    background-size: 100%;
+    position: absolute;
+    top: 1150px;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 35%;
+    -webkit-mask-image: linear-gradient(#000, rgba(0,0,0,0));
+    mask-image: linear-gradient(#000, rgba(0,0,0,0));
+}
+.thirdbg {
+    z-index: 1;
+    background-image:linear-gradient(to top, #B4F1F1, rgba(0,0,0,0), rgba(105, 212, 212) ),  url(ABGP7.jpg);
+    background-size: 100%;
+    position: absolute;
+    top: 2200px;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 50%;
+    -webkit-mask-image: linear-gradient(#000, rgba(0,0,0,0));
+    mask-image: linear-gradient(#000, rgba(0,0,0,0));
+}
+
 a{
     text-decoration: none;
     color: #ECFFFB;
