--- a/ITEC FINALS/profile.css
+++ b/ITEC FINALS/profile.css
@@ -6,12 +6,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    background-color: #5a8888;
+}
 main {
     background-image: url(/forest.jpg);
     width: 100%;
     height: 100vh;
     background-size: 100%;
     opacity: 80%;
+    -webkit-mask-image: linear-gradient(#000, rgba(0,0,0,0));
+    mask-image: linear-gradient(#000, rgba(0,0,0,0));
 }
 nav {
     width: 100%;
@@ -24,7 +29,7 @@ nav {
 }
 .about,.Sched,.prof{
 
-    margin-right: 5px;
+    padding-right: 5px;
 }
 .link{
     background: none;
@@ -96,6 +101,7 @@ a:hover{
     font-family: Poppins;
     font-size: 12px;
 }
+
 .profiles h1{
     text-align: center;
 }
