--- a/ITEC FINALS/sched.css
+++ b/ITEC FINALS/sched.css
@@ -23,9 +23,6 @@ nav {
     top: 0%;
     z-index: 100;
 }
-.about,.Sched,.prof{
-    margin-right: 5px;
-}
 .link{
     background: none;
     border: none;
@@ -106,6 +103,7 @@ a:hover{
     0% {
         transform: translateX(-500px);
     }
+
 }
 
 .down img{
@@ -147,7 +145,10 @@ table{
     margin-top: 195px;
     position: absolute;  
     z-index: 3;
+    background-color: rgba(255, 255, 255, .10);
+    backdrop-filter: blur(3px);
 }
+
 th{
     background-color: rgb(71, 202, 202);
 }
