--- a/ITEC FINALS/about.css
+++ b/ITEC FINALS/about.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image:linear-gradient(#B4F1F1 ,rgb(105, 212, 212) , rgb(105, 212, 212), #B4F1F1);
+    background-image:linear-gradient(#B4F1F1 ,rgb(105, 212, 212) , rgb(105, 212, 212), rgba(105, 212, 212, 1));
     width: 100%;
     height: 300vh;
     background-color: #ffffff;
@@ -77,7 +77,7 @@ nav {
 .us {
     margin-left: 100px;
     margin-right: 100px;
-    margin-top: 800px;
+    margin-top: 750px;
     padding: 5%;
     background-color: rgba(255, 255, 255, .40);  
     backdrop-filter: blur(3px);
@@ -119,10 +119,10 @@ nav {
 }
 .thirdbg {
     z-index: 1;
-    background-image:linear-gradient(to top, #B4F1F1, rgba(0,0,0,0), rgba(105, 212, 212) ),  url(ABGP7.jpg);
+    background-image:linear-gradient(to top, rgba(105, 212, 212, 1), rgba(0,0,0,0), rgba(105, 212, 212, 1) ),  url(ABGP7.jpg);
     background-size: 100%;
     position: absolute;
-    top: 2200px;
+    top: 2000px;
     bottom: 0;
     height: 100%;
     width: 100%;
