--- a/ITEC FINALS/vjprof.css
+++ b/ITEC FINALS/vjprof.css
@@ -8,11 +8,11 @@
     box-sizing: border-box;
 }
 body{
-    background: #2D767F;
+    background: #3c848b;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400vh;
+    height: 220vh;
     width: 100%;
 }
 
@@ -280,4 +280,63 @@ h4
     margin-top: 20px;
     font-size: small;
     margin-bottom: 30px;
+}
+
+.container2 {
+    display: flex;
+    position: absolute;
+    margin-top: 1000px;
+}
+
+.col1 {
+    margin-right: 400px;
+}
+
+.col2{
+    background-color: rgba(255,255,255,0.2);
+    width: 400px;
+    height: 210px;
+    border-radius: 5%;
+    padding: 10px;
+    margin-top: 250px;
+    margin-left: -200px;
+}
+
+.col2 h1 {
+    margin-top: 20px;
+    margin-left: 50px;
+    font-family: sans-serif;
+}
+
+.col2 ul {
+    margin-left: 80px;
+    margin-top: 20px;
+    font-family: sans-serif;
+    font-size: larger;
+}
+
+.slider{
+    margin-top: 5%;
+    border-radius: 25px;
+}
+
+img {
+    width: 600px;
+    height: 800px;
+    object-fit: cover;
+}
+
+.btn{
+    margin-top: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
+    width: 100px;
+    height: 50px;
+    background-color: rgb(114, 187, 192);
+    border-radius: 10px;
+    border: none;
+}
+.btn:hover{
+    color:white;
+    background-color: black;
 }
